Kubernete/network_policy/allow_ingress.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: pod
spec:
  podSelector:
    matchLabels:
      app: ip-app
  policyTypes:
  - Ingress
  ingress:
  - from:
    - ipBlock:
        cidr: 0.0.0.0/0
      podSelector:
        matchLabels:
          app: frontend
    ports:
    - protocol: TCP
      port: 30000
